# lib_grayscale_filter

./: CMakeLists.txt  FindFreeImage.cmake  README.md  dctref.c  filterdawgs.cpp  filterdawgs2.cpp  filterdawgscolourize.cpp  filterrotate.cpp  fimage.cpp  genericimage.cpp  random.cpp
dependent_projects/: CMakeLists.txt  dependencies.txt
include/: filterdawgs.h  filterdawgs2.h  filterdawgscolourize.h  filterrotate.h  fimage.h  genericimage.h  genericrgb.h  helpers.h  random.h
src/: dctref.c  filterdawgs.cpp  filterdawgs2.cpp  filterdawgscolourize.cpp  filterrotate.cpp  fimage.cpp  genericimage.cpp  random.cpp
tests/: filter_speed_test.cpp  image_in_out_test.cpp
